# style-signal

./: .gitignore  DATA_LICENSE  NOTICE  README.md  SKILL.md  pyproject.toml
docs/: ADAPTERS.md  API.md  DATA.md  NEXT_DEVELOPMENT.md  OPENSOURCE_ROADMAP.md  PHASE1_REFACTOR_PLAN.md  PHASE2_VISION_TAGGING.md  PHASE3_TIMESERIES_API.md  SIGNALS.md
scripts/: crawl.sh  setup.sh
src/fashion_trend/: __init__.py  cli.py  schema.py  signals.py
src/fashion_trend/sources/: __init__.py
src/fashion_trend/sources/farfetch/: __init__.py  adapter.py
src/fashion_trend/sources/grailed/: adapter.py
src/fashion_trend/sources/kream/: adapter.py  parser.py
src/fashion_trend/sources/musinsa/: __init__.py  adapter.py  parser.py
src/fashion_trend/sources/ssense/: __init__.py
src/fashion_trend/sources/styleshare/: __init__.py  adapter.py
src/fashion_trend/sources/twentyninecm/: adapter.py
src/style_signal/: __init__.py  cli.py  fetcher.py  registry.py
src/style_signal/sources/: __init__.py  base.py
src/style_signal/sources/grailed/: __init__.py
src/style_signal/sources/kream/: __init__.py  urls.py
src/style_signal/sources/musinsa/: urls.py
src/style_signal/sources/ssense/: adapter.py
src/style_signal/sources/twentyninecm/: __init__.py  parser.py  urls.py
tests/: test_parsers.py  test_registry.py  test_signals.py  test_urls.py
tests/fixtures/: kream_sample.md  musinsa_sample.md  twentyninecm_sample.md
