[project]
name = "fashion-trend"
version = "0.2.0"
description = "Pluggable fashion trend crawler + report skill"
requires-python = ">=3.11"
dependencies = [
    "scrapling[all]>=0.3",
]

[project.scripts]
fashion-trend = "fashion_trend.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fashion_trend"]
