[project]
name = "style-signal"
version = "0.2.0"
description = "Open fashion trend signal crawler + report skill"
requires-python = ">=3.11"
dependencies = [
    "scrapling[all]>=0.3",
]

[project.scripts]
style-signal = "fashion_trend.cli:main"
fashion-trend = "fashion_trend.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fashion_trend"]
